# IdTech1-Engine

./: .gitignore  CMakeLists.txt  README.md  id_tech_1_doom
src/: defines.h  main.c
src/player/: player.h
src/world/: sector.h  wall.h
